# pk-market-advisory-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  market_advisory_rag_report.tex  pyproject.toml  railway.toml  render.yaml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: ce098e453d66_initial_schema.py
app/: main.py  mcp_server.py
app/api/: routes_health.py  routes_ingest.py  routes_query.py  schemas.py
app/core/: config.py  exceptions.py  logging.py  security.py
app/db/: models.py
app/llm/: clients.py  embeddings.py
app/rag/: pipeline.py  reranker.py  retriever.py
app/vectorstore/: qdrant_client.py
docs/: US Market Advisory Copilot.pptx  market_advisory_rag_report.tex
frontend/: Dockerfile  app.py
frontend/.streamlit/: secrets.toml.example
scripts/: bootstrap.sh  ingest.py
working/: 1777196090688.jfif  1777196090747.jfif
