[tool.poetry]
name = "us-market-advisory-rag"
version = "0.1.0"
description = "A RAG system for US market advisory"
authors = ["Syed_Aqdas <aqis20539@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.11.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
qdrant-client = "^1.8.0"
openai = "^1.3.5"
anthropic = "^0.5.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
tiktoken = "^0.5.2"
pandas = "^2.1.4"
numpy = "^1.26.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
PyPDF2 = "^3.0.1"
langchain = "^0.1.0"
langchain-community = "^0.0.38"
langchain-core = "^0.1.12"
langchain-openai = "^0.0.5"
langchain-text-splitters = "^0.0.1"
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
ruff = "^0.1.6"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
